--- a/ExponentialGrowth.Rmd
+++ b/ExponentialGrowth.Rmd
@@ -3,7 +3,7 @@ title: "The power of exponential growth"
 subtitle: "Three lessons"
 author: "Jesse Brunner"
 date: "`r Sys.Date()`"
-output: tint::tintHtml
+output: tint::tintPdf
 latexfonts:
   - package: newtxmath
     options: 
@@ -42,39 +42,40 @@ chess <- chess %>%
   mutate(Rice = 2^(Square-1),
          Total = cumsum(Rice)
   )
-knitr::kable(chess,col.names = c("Square ($x$)", "Rice on square $x$ ($n$)", "Total rice by square $x$ ($T$)"))
+knitr::kable(chess, format = "simple", 
+             col.names = c("Square ($x$)", "Rice on square $x$ ($n$)", "Total rice by square $x$ ($T$)"))
 ```
 
 
 Before we look at The Big Numbers that I've hinted at, let's see if we can't spot a pattern in how they grow (see the table above for the first ten squares).  Perhaps you'll recognize that the numbers on the squares are powers of two.
 \begin{equation*}
 \begin{aligned}
-2^0 &= 1\\
-2^1 &= 2\\
-2^2 &= 4\\
-2^3 &= 8
+\text{Square 1} \rightarrow 2^0 &= 1\\
+\text{Square 2} \rightarrow 2^1 &= 2\\
+\text{Square 3} \rightarrow 2^2 &= 4\\
+\text{Square 4} \rightarrow 2^3 &= 8
 \end{aligned}
 \end{equation*}
 
-Following this pattern the amount on the 5th square is $2^{5-1}= 2^4 = 16$ and the amount on the 64th square is $2^{(64-1)} = 2^{63}$. In general^[Note that if we started counting the first square as zero, as we would if we were tracking time instead of counting squares, this would simply be $n(x)=2^{x}$.] for square $x$, the number of grains on the square is: 
+Following this pattern the amount on the 5th square is $2^{(5-1)}= 2^4 = 16$ and the amount on the 64th square is $2^{(64-1)} = 2^{63}$. In general^[Note that if we started counting the first square as zero, as we would if we were tracking time instead of counting squares, this would simply be $n(x)=2^{x}$.] for square $x$, the number of grains on the square is: 
 $$
 n(x)=2^{x-1}.
 $$
 
-What about the _total_ number of grains on square $x$, which we'll call $T(x)$? We could just do the math and add those numbers up: $T(x)=2^0 + 2^1 + 2^2 + \dots + 2^{x-1}$. We could also write it more compactly using the summation sign, $\Sigma$: $T(x) = \sum_{i=1}^{i=n} 2^{i-1}$. But we can also cheat a bit if we notice the pattern. The total in the first two squares is $1+2=3$ and in the first three squares is $1+2+4=7$ and in the first four squares is $1+2+4+8=15$. These sums are _close_ to the power of two (i.e., $2^2, 2^3, \text{ and}, 2^4$). Indeed, in each case they are just one below that power. The pattern is $T(x) = 2^x - 1$. So the total (cumulative) number of grains on the 64 squares^[If we started counting with $x=0$ then this would be $T(x) = 2^{x+1} - 1$.] of the chessboard given this little doubling game is $T_{64}=2^{64}-1$.
+What about the _total_ number of grains on square $x$, which we'll call $T(x)$? We could just do the math and add those numbers up: $T(x)=2^0 + 2^1 + 2^2 + \dots + 2^{x-1}$. We could also write it more compactly using the summation sign, $\Sigma$: $T(x) = \sum_{i=1}^{i=n} 2^{i-1}$. But we can also cheat a bit if we notice the pattern. The total in the first two squares is $1+2=3$ and in the first three squares is $1+2+4=7$ and in the first four squares is $1+2+4+8=15$. These sums are _close_ to the power of two (i.e., $2^2, 2^3, \text{ and}, 2^4$). Indeed, in each case they are just one less than that power of two. The pattern is $T(x) = 2^x - 1$. So the total (cumulative) number of grains on the 64 squares^[If we started counting with $x=0$ then this would be $T(x) = 2^{x+1} - 1$.] of the chessboard given this little doubling game is $T_{64}=2^{64}-1$.
 
 Now, how much are those? 
 
-$n_{64}=2^{64-1}=2^{63}$ = `r prettyNum(as.bigz(2^63), big.mark = " ")`
+$\text{Number on square 64} \rightarrow n_{64}=2^{64-1}=2^{63}$ = `r prettyNum(as.bigz(2^63), big.mark = " ")`
 
-$T_{64}=2^{64}-1=$ \hspace{0.4cm} `r prettyNum(as.bigz(2^64-1), big.mark = " ")`
+$\text{Number on all 64 squares} \rightarrow T_{64}=2^{64}-1=$ \hspace{0.4cm} `r prettyNum(as.bigz(2^64-1), big.mark = " ")`
 
-Those are big numbers! Quintillions or, if you prefer, billions of billions! But quite honestly that doesn't mean a lot to me. I tried [Wolfram Alpha](https://www.wolframalpha.com/input/?i=2^64+grains+of+rice) and while the nutrition label wasn't terribly helpful, it is sort of fun!
+Those are big numbers! Quintillions or, if you prefer, billions of billions of grains of rice! But quite honestly that doesn't mean a lot to me. I tried asking [Wolfram Alpha](https://www.wolframalpha.com/input/?i=2^64+grains+of+rice) how much rice this was and while the nutrition label wasn't terribly helpful, it is sort of fun!
 ```{r, fig.cap="Nutritional value of a huge amount of rice.", fig.margin=TRUE}
 knitr::include_graphics('Rice_Nutrition.png', dpi = 500)
 ```
 
-Let's try again. What is the total rice production in the world? [Wolfram Alpha](https://www.wolframalpha.com/input/?i=2^64+grains+of+rice) places it at 2.573 billion metric tons per year or $2.573 \times 10^9 \text{tons} \times 1000 \text{kg/ton} = 2.573 \times 10^{12} \text{kg}$. That's a lot! But it still pales in comparison to the $9.2 \times 10^{14} \text{kg}$ that the chessboard rice is estimated to weigh (see the nutrition panel above). In other words, we produce several _hundred_ times less rice in a year than would have been on that chess board if the king or emperor had been able to follow through on the deal. Zowie!
+Let's try again. What is the total production of rice in the world? [Wolfram Alpha](https://www.wolframalpha.com/input/?i=2^64+grains+of+rice) places it at 2.573 billion metric tons per year or $2.573 \times 10^9 \text{tons} \times 1000 \text{kg/ton} = 2.573 \times 10^{12} \text{kg}$. That's a lot! But it still pales in comparison to the $9.2 \times 10^{14} \text{kg}$ that the chessboard rice is estimated to weigh (see the nutrition panel to the side). In other words, we produce several hundred times _less_ rice in a year than would have been on that chess board if the king or emperor had been able to follow through on the deal. Zowie!
 
 I am by no means the first to use this example or to try to provide some context to the numbers^[Just search online for "exponential growth chess board" and you'll find TED talks, YouTube videos, stock photos, and even [displays worthy of a science museum](https://www.youtube.com/watch?v=wNJVvwhU3a0)]. The numbers are pretty mind boggling and so many have tried to put them in perspective. But it is important to note that doubling processes, and exponential growth more broadly, is interesting not just because you can get really, really huge numbers, but because of how you get there^[For instance, by the 13th square you would have enough rice for one bowl of rice, but by the 24th you would have enough rice to make the worlds largest paella (2400 bowls of rice)! Do with this information what you will.]. 
 
@@ -83,15 +84,17 @@ I am by no means the first to use this example or to try to provide some context
 
 A classic question on math and ecology exams is the following: If a lily pad population grows so that it doubles its size (or coverage of a pond) each day and it covers the whole pond on the 20th day, on what day was the pond half covered? Take a moment and think about it...
 
-The answer is to work backwards. If the lily pad population doubles each day, then moving backward in time it is halved each day. So they covered half the pond the day before they covered the whole thing; the answer is day 19. The same is true for our chess board example and any other doubling process, although it may take more or less time than a day to double. For instance, if we were watching these lily pads grow on a pond, how much time would we have from when they covered $< 1\%$ of the pond to it covering the whole thing? 
+The answer is to work backwards. If the lily pad population doubles each day, then moving backward in time it is halved each day. So the lily pads covered _half_ the pond the day before they covered the _whole_ pond; the answer is day 19. The same is true for our chess board example and any other doubling process, although it may take more or less time than a day to double. For instance, if we were watching these lily pads grow on a pond, how much time would we have from when they covered $< 1\%$ of the pond to it covering the whole thing? 
 
-Well, on day 19 they covered half the pond, on day 18 they covered one-quarter of the pond (half of a half), on day 17 they covered one-eighth the pond (half of a half of a half), and so on. If $x$ is the time _before_ some threshold (i.e., 100% coverage occurs at $x=0$), such that $x$ is $0,-1,-2,...$, then the fraction of the pond covered at time $x$ is $n(x) = 2^x$. We find that when $x=-7$ less than $1\%$ of the surface area would be covered (precisely, $2^{-7} = 0.0078125$ or 0.78%). Think about that. If you were watching the lily grow, you wouldn't see anything worrying for a long time. Only on the 14th day since introduction would more than 1% of the surface area be covered. Why worry? But in just a few days, a few more rounds of doubling, this process would start to look rather out of control. 
+Well, on day 19 they covered half the pond, on day 18 they covered one-quarter of the pond (half of a half), on day 17 they covered one-eighth the pond (half of a half of a half), and so on. If $x$ is the time _before_ some threshold (i.e., 100% coverage occurs at $x=0$), such that $x$ is $0,-1,-2,...$, then the fraction of the pond covered at time $x$ is $n(x) = 2^x$. We find that when $x=-7$ less than $1\%$ of the surface area would be covered (precisely, $2^{-7} = 0.0078125$ or 0.78%). 
+
+Think about that. If you were watching the lily pad population grow, you wouldn't see anything worrying for a long time. Only on the 14th day since their introduction would more than 1% of the surface area be covered. Why worry? But in just a few days, a few more rounds of doubling, this process would start to look rather out of control. And just six days after a mere 1% of the surface was covered, the whole lake would be taken over! 
 
 The fact that doubling processes only seem out of control later on has been called [the "second half of the chessboard" in business](https://en.wikipedia.org/wiki/Wheat_and_chessboard_problem), but it applies equally to many processes. For instance, biological invasions start with small numbers of individuals that are quite capable of doubling over some time interval and are often discovered too late, as the invasion is out of control. The same is true of epidemics. They start small, but if one person infects two others, it is only nine "generations" of infection before that one infected person becomes more than a thousand, and nineteen generations before there are more than a million! 
 
-It can be hard to recognize how a doubling process might grow in the early days. Again, the initial numbers are small and seemingly innocuous, if not plain hard to detect^[Consider the discovery of the [Asian giant hornet](https://www.nytimes.com/2020/05/02/us/asian-giant-hornet-washington.html) in the Pacific Northwest. Was it _just_ introduced? Were there multiple introductions? Will it grow exponentially?]. But also, most processes, at least biological processes are messy or stochastic. One infected person give rise to one new infection, or three, or none. Those chance outcomes have a lot of influence early on in the process when the numbers are low, but average out later, when there are more people doing the infecting, or more individuals of an invasive species reproducing. 
+It can be hard to recognize how a doubling process might grow in the early days. Again, the initial numbers are small and seemingly innocuous, if not plain hard to detect^[Consider the discovery of the [Asian giant hornet](https://www.nytimes.com/2020/05/02/us/asian-giant-hornet-washington.html) in the Pacific Northwest. Was it _just_ introduced? Were there multiple introductions? Will it grow exponentially?]. But also, most processes, at least biological processes are messy or stochastic. One infected person might give rise to one new infection, or three, or none. Those chance outcomes have a lot of influence early on in the process when the numbers are low, but average out later, when there are more people doing the infecting, or more individuals of an invasive species reproducing. 
 
-```{r, fig.margin=TRUE, fig.cap="The doubling process with increasing amounts of chance or noise in the process. Each process was run three time. Notice that one of the three processes with the most noise fizzled out after generation three."}
+```{r, fig.margin=TRUE, fig.cap="The doubling process with increasing amounts of chance or \"noise\" in the process. Each process was run three time. Notice that one of the three processes with the most noise fizzled out after generation three."}
 myreds <- c('black', RColorBrewer::brewer.pal(4,"Reds")[c(3,4)])
 
 doubling <- function(x, sd) {
@@ -144,7 +147,7 @@ where $N_0$ is what you started with and $\lambda$ is the per time-step growth r
 
 Now you might wonder how this equation relates to our chess-doubling game above, where $n(x)=2^{x-1}$. They are actually identical if we set $t=x-1$, because above we started counting at square one instead of time zero, $N_0 = 1$ because there was one grain of rice on the first square, and $\lambda = 2$ because we doubled every step. What this version of the equation makes clear is that we could play many versions of the game where instead of doubling  each step ($\lambda = 2$), we triple ($\lambda = 3$) or increase by one-quarter ($\lambda = 1.25$) or shrink by half ($\lambda = 0.5$) or use any other rate of change. It is also important to note that even if we are not precisely doubling each step ($\lambda \neq 2$), so long as $\lambda$ is greater than one (i.e., the population grows), it will (eventually) double, and then double again, and so on. 
 
-We can find the doubling time, which I will call $\tau$, given any (positive) value of $\lambda$ by recognizing that $N(\tau) = 2N_0$, taking the log of both sides, and then doing some re-arranging.
+We can find the doubling time^[Useful if you want to see how quickly the amount you owe to the loan shark down the street might double! Or your retirement savings...when you get some.], which I will call $\tau$, given any (positive) value of $\lambda$ by recognizing that $N(\tau) = 2N_0$, taking the log of both sides, and then doing some re-arranging.
 
 \begin{equation*}
 \begin{aligned}
@@ -159,7 +162,8 @@ So if $\lambda=2$ then the doubling time, $\tau$, is one, and if $\lambda = 1.5$
 
 
 
-Often, however, growth (or decline) does not happen in discrete steps, but rather everything happens all the time. Think of dividing bacteria, transmission of infections, or the buying and selling of stocks. In these cases it would be more accurate to think of time as continuous rather than discrete. 
+Often, however, growth (or decline) does not happen in discrete steps, but rather everything happens all the time. Think of dividing bacteria, transmission of infections, or the buying and selling of stocks. In these continuous-time cases the same logic applies, but the equation looks slightly different:
+
 ```{r, fig.margin=TRUE, fig.cap='Geometric doubling (black line) occurs in discrete steps whereas exponential doubling (red line) is a continuous process.'}
 ggplot(chess, aes(Square-1, Rice)) + 
   geom_step() +
@@ -167,11 +171,11 @@ ggplot(chess, aes(Square-1, Rice)) +
   scale_x_continuous("Time (t)", breaks = 2*0:5) +
   scale_y_continuous("N(t)") 
 ```
-The same logic applies, but the equation looks slightly different:
+
 $$
 N(t) = N_0 \times e^{rt}.
 $$
-In this exponential equation $e^r$ is equivalent to $\lambda$ in the geometric equation; we just need to keep in mind in this version the amount does not change when $r=0$ because $e^0 = 1$, it grows when $r>0$ and it shrinks when $r < 0$. Moreover, the doubling time is simply, 
+In this _exponential_ equation, $e^r$ is equivalent to $\lambda$ of the geometric equation. This means $N(t)$ does not change when $r=0$ because $e^0 = 1$. It grows when $r>0$ and it shrinks when $r < 0$. For completeness, the doubling time is simply, 
 
 \begin{equation*}
 \begin{aligned}
@@ -183,11 +187,11 @@ In this exponential equation $e^r$ is equivalent to $\lambda$ in the geometric e
  
 The doubling time is 1 when $r=\log(2) = 0.693$.
 
-If you want to ignore the math, just note that these two equations are equivalent and produce equivalent dynamics; only one takes time (or chess squares) in discrete steps and the other treats it as continuous. Most mathematically-inclined people favor the exponential equation because it has nicer properties that make it easier to work with. 
+If you want to ignore the math^[But why?], just note that these two equations are equivalent and produce equivalent dynamics; only one takes time (or chess squares) in discrete steps and the other treats it as continuous. Most mathematically-inclined people favor the exponential equation because it has nicer properties that make it easier to work with. But the logic is the same.
 
 # Exponential means a _constant_ growth rate
 
-In our examples so far, some quantity (rice, lily pads, infections) doubles in every $\tau$ time steps or generation. This means that every individual (grain of rice, infected individual) yields two individuals in the next $\tau$ steps, always. It doesn't matter how many there are or what else is happening there is _always_ a doubling. This can be easier to see if we plot the data on a logarithmic scale. 
+In our examples so far, some quantity (rice, lily pads, infections) doubles in every $\tau$ time steps or generation. This means that every individual (grain of rice, infected individual) yields two individuals in the next $\tau$ steps, always. It doesn't matter how many there are or what else is happening; there is _always_ a doubling. This can be easier to see if we plot the data on a logarithmic scale. 
 
 ```{r, fig.margin=TRUE, fig.cap=c("The first ten squares of the chess board on a linear y-axis", "The first ten squares of the chess board on a log base 2 y-axis", "The first ten squares of the chess board on a log base 10 y-axis")}
 
@@ -251,8 +255,7 @@ Q + scale_y_log10("N(t)", breaks = 10^c(1:9),
 
 It is also important to note that slightly different slopes, representing different growth rates, can have dramatic effects on the resulting amounts. Even seemingly small changes in slopes (i.e., $r$ or $\lambda$) can have profound impacts on how large something grows, even over just 10 time steps (e.g., several thousand compared to several hundred thousand). And in dozens or hundreds of time steps these small differences in growth are magnified into massive differences! The power of compounding!
 
-This same less also applies to _changes_ in slopes part way through a process. When we look at cases of COVID-19 (or resulting deaths)---as I have been obsessively doing for many weeks---we are interested in the slope as cases go up, which indicates how rapidly the epidemic is growing. We are also looking (and hoping) for these lines to bend flatter and flatter, meaning first that the rate at which the epidemics are growing is slowing. Eventually we hope they will slope downward, meaning the epidemic is waning.  
-
+This same less also applies to _changes_ in slopes part way through a process. When we look at cases of COVID-19 (or resulting deaths)---as I was obsessively doing early in the pandemic---or any epidemic we are interested in the slope as cases go up, which indicates how rapidly the epidemic is growing. We are also looking (and hoping) for these lines to bend flatter and flatter, meaning first that the rate at which the epidemics are growing is slowing. Eventually we hope they will slope downward, meaning the epidemic is waning.  
 
 
 ```{r, fig.cap="Number of new confirmed cases per day. From http://91-divoc.com/pages/covid-visualization/ on 13 May 2020. The slopes in this figure change for many reasons---social distancing, reduced contacts, local epidemics running their course---but what ever the reason, a shallower line means a slower rate of growth in new cases.", out.width="4in"}
@@ -261,7 +264,7 @@ knitr::include_graphics('COVID_curves.png')
 
 # Early interventions are key
 
-Imagine our apocryphal king got wise the doubling game and was able to renegotiate the terms of the game. Instead of doubling every step ($\lambda=2$), the amount increased by $\lambda=\sqrt[3]{2}=1.26$-fold every square so that the rice doubled every _three_ squares. How long would he have to recognize his mistake and change the game to have an impact? 
+Imagine our apocryphal king got wise the doubling game somewhere along the way and was able to renegotiate the terms of the game. Instead of doubling every step ($\lambda=2$), he was able to reduce lambda to $\lambda=\sqrt[3]{2}=1.26$, so that the rice doubled every _three_ squares. How long would he have to recognize his mistake and change the terms of the game to have an appreciable impact? 
 
 ```{r, fig.cap="The number of grains of rice on each square given the original doubling game or when the rate was decreased at different points in the game."}
 df3 <- expand.grid(Square=1:64,
@@ -286,13 +289,15 @@ R + scale_y_log10("Rice on square x",
                   # this gives us the 10^x formatting of those labels
                   labels = trans_format("log10", math_format(10^.x)))
 ```
-It turns out that _when_ the rules were changed and the pace of increase was changed is really critical. If the king changed the rules half-way through, after square 32, the amount of rice on the last square dropped from 9 quintillion---several hundred times the annual rice production in recent years---to a mere 3.5 trillion---less than 0.01\% of annual rice production. Thousands of thousands of times less rice! The payout would have gone from impossible to just quite expensive. And if the king changed the rules at square sixteen the amount of rice on the last square would be a mere couple billion grains, just 140 tonnes and easily accomplished. If he was very savvy and changed the rules after square 4, the last spot on the board would have had only 8 million or so grains of rice, just 544 kilograms, an amount on par with what is at your local grocery store. In other words, just changing the rate of doubling from every square to every third square, and doing it _early_ reduces an impossibly large problem to one that is easily managed. 
+It turns out that _when_ the king changes the rules is really critical. If the king changed the rules half-way through, after square 32, the amount of rice on the last square dropped from 9 quintillion---several hundred times the annual rice production in recent years---to a mere 3.5 trillion---less than 0.01\% of annual rice production. Thousands of thousands of times less rice! The payout would have gone from impossible to just quite expensive. And if the king changed the rules at square sixteen the amount of rice on the last square would be a mere couple billion grains, just 140 tonnes and easily accomplished. If he was very savvy and changed the rules after square 4, the last spot on the board would have had only 8 million or so grains of rice, just 544 kilograms, an amount on par with what is at your local grocery store. In other words, just changing the rate of doubling from every square to every third square, and doing it _early_ reduces an impossibly large problem to one that is easily managed. 
 
-The same is true for any exponentially growing process, from invasive species to virus growing in a body to infections growing and spreading in a population. If you somehow change the game and reduce the rate of growth _early_, you have a much, much more manageable problem on your hands.  Consider your immune response to a new virus infection. The first time around it takes days for your body to recognize the threat and mount a sizeable immune response---B & T cells need to be activated, proliferate, create their effectors and so on. In the meantime the virus population is well on its way to enormous sizes, you get sick and feel rotten (hopefully not much more than that), and you likely spread the virus to someone new. Now the _second_ time you encounter this virus your immune system is ready. It has a head start and can start reducing virus population growth rates almost immediately. The virus is cleared out well before it reaches problematic levels. Vaccines work the same way; they give your immune system a head start so they can fight back early on, and that makes all the difference.
+The same is true for any exponentially growing process, from invasive species to virus growing in a body to infections growing and spreading in a population. If you somehow change the game and reduce the rate of growth _early_, you have a much, much more manageable problem on your hands.  
+
+Consider your immune response to a new virus infection. The first time around it takes days for your body to recognize the threat and mount a sizeable immune response---B & T cells need to be activated, proliferate, create their effectors and so on. In the meantime the virus population is well on its way to enormous sizes, you get sick and feel rotten (hopefully not much more than that), and you likely spread the virus to someone new. Now the _second_ time you encounter this virus your immune system is ready. It has a head start and can start reducing virus population growth rates almost immediately. The virus is cleared out well before it reaches problematic levels. Vaccines work the same way; they give your immune system a head start so they can fight back early on, and that makes all the difference.
 
 ```{r, fig.cap="Actual and simulated numbers of COVID-19 deaths with earlier interventions. From www.nytimes.com/2020/05/20/us/coronavirus-distancing-deaths.html."}
 
 knitr::include_graphics("Intervention_COVID.png", dpi=400)
 ```
 
-Similar logic applies to a growing epidemic^[Try playing with the slider in this [epidemic calculator](https://gabgoh.github.io/COVID/index.html)] or the invasion of an exotic species. Early interventions can keep exponentially growing problems smaller and more manageable. This is clear with COVID-19 epidemics. In nations and regions that adopted interventions like social distancing and restricting the size of public gathers kept those epidemics from getting as large as the places that waited^[Yes, there are exceptions to the pattern and some places with early successes have seen subsequent epidemics when they began to open up. A discussion of why will have to wait, but the underlying pattern, that early interventions are more effective than later ones is true across the board.]. Indeed, several analyses have suggested that beginning the interventions we undertook in the U.S.A. just _one week earlier_ could have cut the number of infections and death _in half_^[For that wave... there have been many.]! That means fewer people and resources are needed to combat the growing epidemic, and the risk of it getting out of hand would have been reduced. Both people and money are saved. And all because someone understood the power of exponential growth and the importance of early interventions!
+Similar logic applies to a growing epidemic^[Try playing with the slider in this [epidemic calculator](https://gabgoh.github.io/COVID/index.html)] or the invasion of an exotic species. Early interventions can keep exponentially growing problems smaller and more manageable. This is clear with COVID-19 epidemics. In nations and regions that adopted interventions like social distancing and restricting the size of public gatherings kept those epidemics from getting nearly as large as the places that waited^[Yes, there are exceptions to the pattern and some places with early successes have seen subsequent epidemics when they began to open up. A discussion of why will have to wait, but the underlying pattern, that early interventions are more effective than later ones is true across the board.]. Indeed, several analyses have suggested that beginning the interventions we undertook in the U.S.A. just _one week earlier_ could have cut the number of infections and death _in half_^[For that wave... there have now been many.]! That means fewer people and resources are needed to combat the growing epidemic, and the risk of it getting out of hand would have been reduced. Both people and money are saved. And all because someone understood the power of exponential growth and the importance of early interventions!
